--- a/package.json
+++ b/package.json
@@ -1,52 +1,39 @@
 {
-  "name": "react-portfolio-template",
-  "private": true,
-  "homepage": "http://luisricardo.me/Portifolio/",
+  "name": "portifolio",
   "version": "0.1.0",
-  "author": "",
+  "private": true,
+  "homepage": "https://luiss1569.github.io/luiss1569.github.io",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export && gh-pages -d out"
+  },
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "gatsby-image": "^2.5.0",
-    "gatsby-plugin-manifest": "^2.6.1",
-    "gatsby-plugin-offline": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sass": "^2.6.0",
-    "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-source-filesystem": "^2.5.0",
-    "gatsby-transformer-sharp": "^2.6.0",
-    "gh-pages": "^3.1.0",
-    "node-sass": "^4.0.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0",
-    "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.1"
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "framer-motion": "^4.1.17",
+    "next": "10.2.3",
+    "next-images": "^1.7.0",
+    "nprogress": "^0.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.8",
+    "@types/styled-components": "^5.1.9",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "typescript": "^4.3.2",
+    "gh-pages": "^3.2.3"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "predeploy": "npm run build",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "start": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "develop": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  "main": "index.js",
+  "repository": "https://github.com/luiss1569/luiss1569.github.io.git",
+  "author": "Luis Ricardo Santos <rcsrcs1569@gmail.com>",
+  "license": "MIT"
 }
