--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export && gh-pages -d out"
+    "export": "next build && next export && gh-pages -d out"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -16,6 +16,7 @@
     "next": "10.2.3",
     "next-images": "^1.7.0",
     "nprogress": "^0.2.0",
+    "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
@@ -29,8 +30,8 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "typescript": "^4.3.2",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "typescript": "^4.3.2"
   },
   "main": "index.js",
   "repository": "https://github.com/luiss1569/luiss1569.github.io.git",
