--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "export": "next build && next export && gh-pages -d out"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^15.4.0",
+    "@contentful/rich-text-plain-text-renderer": "^15.3.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@notionhq/client": "^0.3.2",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "next-images": "^1.7.0",
@@ -31,6 +34,7 @@
     "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "gh-pages": "^3.2.3",
+    "prettier": "^2.4.1",
     "typescript": "^4.3.2"
   },
   "main": "index.js",
