--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@notionhq/client": "^0.3.2",
+    "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "next-images": "^1.7.0",
