--- a/package.json
+++ b/package.json
@@ -14,26 +14,28 @@
     "@contentful/rich-text-plain-text-renderer": "^15.3.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@notionhq/client": "^0.3.2",
-    "axios": "^0.21.4",
-    "framer-motion": "^4.1.17",
-    "next": "10.2.3",
+    "@notionhq/client": "^0.4.13",
+    "@types/react-lottie": "^1.2.6",
+    "axios": "^0.25.0",
+    "framer-motion": "^6.2.3",
+    "next": "12.0.9",
     "next-images": "^1.7.0",
     "nprogress": "^0.2.0",
     "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^15.6.1",
+    "@types/node": "^17.0.13",
     "@types/react": "^17.0.8",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "gh-pages": "^3.2.3",
     "prettier": "^2.4.1",
     "typescript": "^4.3.2"
