--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.4.0",
     "@contentful/rich-text-plain-text-renderer": "^15.3.6",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
     "@notionhq/client": "^0.4.13",
-    "@types/react-lottie": "^1.2.6",
     "axios": "^0.25.0",
     "framer-motion": "^6.2.3",
     "next": "12.0.9",
@@ -30,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.8",
+    "@types/react-lottie": "^1.2.6",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-inline-import": "^3.0.0",
