--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^6.2.3",
     "next": "12.0.9",
     "next-images": "^1.7.0",
+    "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
     "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
